Add Zoom audio instructions, reformat/fix broken html structures

--- a/cidr2022/registration.html
+++ b/cidr2022/registration.html
@@ -171,7 +171,8 @@
 		</div>
 
 		<div id="contentwide">
-			<h2>Venue:</h2>
+			<h2>Registration</h2>
+			<h3>Venue</h3>
 
 
 				<p>
@@ -200,21 +201,23 @@
 <p>
 
 
- <div style="background-color: #E6B0AA ; padding: 10px; border: 1px solid red;">
+ <div style="background-color: #E6B0AA ; padding: 10px; margin-bottom: 10px; border: 1px solid red;">
 
 All registration will be closed on January 8th noon pacific time. Registered participants will receive instructions via email on January 8th. </div>
 <p>
 The following registration options are available:
 <p>
-- <b><a href="inperson-attendees.html"> physical attendance</a></b>; where registration is arranged and paid directly to the Chaminade hotel. The base price for attending the conference from Sunday afternoon until Wednesday noon, including breakfasts, lunches, dinners, snacks and drinks is $1600. There is a $100 discount for students (applied at check-out) and, independently, a $300 discount for sharing the room with one room-mate. Regarding the latter: capacity for this is limited and we ask you to specify the room-mate name in the registration form (both persons need to register independently with cross-matching room-mate names). To help finding a roommate, CIDR 2022 will circulate a list of people seeking roommates. Chaminade will not accept a shared room request unless the roommate is identified. Please also be aware of the disclaimer at the bottom of this page.
-<p>
-- <b><a href="remote-attendees.html">Zoom attendance</a></b>; with registration via an Eventbrite page. There is a "Zoom Presenter" price of $300 for authors who will present a paper or abstract over zoom. For all other Zoom attendees, the registration price is $100 (and $50 for students).
+<ul>
+<li><b><a href="inperson-attendees.html">Physical attendance</a></b>; where registration is arranged and paid directly to the Chaminade hotel. The base price for attending the conference from Sunday afternoon until Wednesday noon, including breakfasts, lunches, dinners, snacks and drinks is $1600. There is a $100 discount for students (applied at check-out) and, independently, a $300 discount for sharing the room with one room-mate. Regarding the latter: capacity for this is limited and we ask you to specify the room-mate name in the registration form (both persons need to register independently with cross-matching room-mate names). To help finding a roommate, CIDR 2022 will circulate a list of people seeking roommates. Chaminade will not accept a shared room request unless the roommate is identified. Please also be aware of the disclaimer at the bottom of this page.</li>
+
+<li><a href="remote-attendees.html">Zoom attendance</a></b>; with registration via an Eventbrite page. There is a "Zoom Presenter" price of $300 for authors who will present a paper or abstract over zoom. For all other Zoom attendees, the registration price is $100 (and $50 for students).</li>
+</ul>
 <p>
 Registration is open to paper authors exclusively until November 12, after which it will be opened to anyone (space permitting). At least one author of each paper or abstract must have registered before December 9, 2021 for it to be included in the program.
 
 <p>
 The registration can be done <b>below on this page</b>. 
-If you have inquiries not covered by the FAQ below, please contact: <a>CIDR2022Info@cidrdb.org</a>
+If you have inquiries not covered by the FAQ below, please contact: <a>CIDR2022Info@cidrdb.org</a>.
 
 <h3>FAQ</h3>
 
