--- a/cidr2022/program.html
+++ b/cidr2022/program.html
@@ -76,7 +76,7 @@
         <div id="contentwide">
 
 
-            <h3>CIDR 2022 Program:</h3>
+            <h3>CIDR 2022 Program</h3>
             <p>Talk videos will be posted after each conference day on <a
                     href="https://www.youtube.com/channel/UCMSoRpgXRxhiSna6FkhTGeg">YouTube</a>.
             <p>
@@ -620,6 +620,13 @@
 
 
         </div>
+
+    </div>
+    <div id="footer">
+        <p>
+            <span>&copy; 2022 <a href="registration.html#">CIDR Conference</a></span><br /> Template design by <a
+                href="http://andreasviklund.com/">Andreas Viklund</a>
+        </p>
     </div>
 </body>
 
