--- a/cidr2022/remote-attendees.html
+++ b/cidr2022/remote-attendees.html
@@ -1,112 +1,115 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<head>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta name="description" content="The 12th Conference on Innovative Data Systems Research (CIDR 2022), Registration Information" />
-<meta name="keywords" content="your,keywords,goes,here" />
-<meta name="author" content="Your Name" />
-<link rel="stylesheet" type="text/css" href="andreas02.css"
-	media="screen,projection" />
-<link rel="stylesheet" type="text/css"
-	href="http://www.cidrdb.org/cidr2013/print.css" media="print" />
-<title>CIDR 2022 - Registration</title>
 
-<script type="text/javascript" src="jquery-1.2.6.min.js"></script>
-<script language="JavaScript">
-<!-- This script and many more are available free online at -->
+<head>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta name="description"
+		content="The 12th Conference on Innovative Data Systems Research (CIDR 2022), Registration Information" />
+	<meta name="keywords" content="your,keywords,goes,here" />
+	<meta name="author" content="Your Name" />
+	<link rel="stylesheet" type="text/css" href="andreas02.css" media="screen,projection" />
+	<link rel="stylesheet" type="text/css" href="http://www.cidrdb.org/cidr2013/print.css" media="print" />
+	<title>CIDR 2022 - Registration</title>
+
+	<script type="text/javascript" src="jquery-1.2.6.min.js"></script>
+	<script language="JavaScript">
+< !--This script and many more are available free online at-- >
 	// Set up the image files to be used.
 
 	var theImages = new Array() // do not change this
 
-	// To add more image files, continue with the
+		// To add more image files, continue with the
 
-	// pattern below, adding to the array.
+		// pattern below, adding to the array.
 
-	theImages[0] = 'img/Property_Courtyard.jpg'
+		theImages[0] = 'img/Property_Courtyard.jpg'
 
-	// do not edit anything below this line
+		// do not edit anything below this line
 
-	var p = theImages.length;
+		var p = theImages.length;
 
-	var whichImage = Math.round(Math.random() * (p - 1));
+		var whichImage = Math.round(Math.random() * (p - 1));
 
-	function showImage() {
+		function showImage() {
 
-		document.write('<div id="masthead">');
+			document.write('<div id="masthead">');
 
-		document
+			document
 				.write('<img src="' + theImages[whichImage] + '" alt="" width="760" height="200" /></a>');
 
-		document.write('</div>');
+			document.write('</div>');
 
-	}
-	/*** 
-	 Simple jQuery Slideshow Script
-	 Released by Jon Raasch (jonraasch.com) under FreeBSD license: free to use or modify, not responsible for anything, etc.  Please link out to me if you like it :)
-	 ***/
+		}
+		/***
+		Simple jQuery Slideshow Script
+		Released by Jon Raasch (jonraasch.com) under FreeBSD license: free to use or modify, not responsible for anything,
+		etc. Please link out to me if you like it :)
+		***/
 
-	function slideSwitch() {
-		var $active = $('#slideshow IMG.active');
+		function slideSwitch() {
+			var $active = $('#slideshow IMG.active');
 
-		if ($active.length == 0)
-			$active = $('#slideshow IMG:last');
+			if ($active.length == 0)
+				$active = $('#slideshow IMG:last');
 
-		// use this to pull the images in the order they appear in the markup
-		var $next = $active.next().length ? $active.next()
+			// use this to pull the images in the order they appear in the markup
+			var $next = $active.next().length ? $active.next()
 				: $('#slideshow IMG:first');
 
-		// uncomment the 3 lines below to pull the images in random order
+			// uncomment the 3 lines below to pull the images in random order
 
-		// var $sibs  = $active.siblings();
-		// var rndNum = Math.floor(Math.random() * $sibs.length );
-		// var $next  = $( $sibs[ rndNum ] );
+			// var $sibs = $active.siblings();
+			// var rndNum = Math.floor(Math.random() * $sibs.length );
+			// var $next = $( $sibs[ rndNum ] );
 
-		$active.addClass('last-active');
+			$active.addClass('last-active');
 
-		$next.css({
-			opacity : 0.0
-		}).addClass('active').animate({
-			opacity : 1.0
-		}, 1000, function() {
-			$active.removeClass('active last-active');
+			$next.css({
+				opacity: 0.0
+			}).addClass('active').animate({
+				opacity: 1.0
+			}, 1000, function () {
+				$active.removeClass('active last-active');
+			});
+		}
+
+		$(function () {
+			setInterval("slideSwitch()", 5000);
 		});
-	}
+	</script>
 
-	$(function() {
-		setInterval("slideSwitch()", 5000);
-	});
-</script>
+	<style type="text/css">
+		/*** set the width and height to match your images **/
+		#slideshow {
+			position: relative;
+			height: 350px;
+		}
 
-<style type="text/css">
+		#slideshow IMG {
+			position: absolute;
+			top: 0;
+			left: 0;
+			z-index: 8;
+			opacity: 0.0;
+		}
 
-/*** set the width and height to match your images **/
-#slideshow {
-	position: relative;
-	height: 350px;
-}
+		#slideshow IMG.active {
+			z-index: 10;
+			opacity: 1.0;
+		}
 
-#slideshow IMG {
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: 8;
-	opacity: 0.0;
-}
+		#slideshow IMG.last-active {
+			z-index: 9;
+		}
+	</style>
 
-#slideshow IMG.active {
-	z-index: 10;
-	opacity: 1.0;
-}
-
-#slideshow IMG.last-active {
-	z-index: 9;
-}
-</style>
-
-<style>
-    #myFrame { width:100%; height:100%; }
-</style>
-
+	<style>
+		#myFrame {
+			width: 100%;
+			height: 100%;
+		}
+	</style>
+	`
 
 
 </head>
@@ -119,7 +122,7 @@
 				<a href="index.html">CIDR 2022</a>
 			</h1>
 			<p>
-				January 9-12, 2022        <span style="padding-left:30px">  Chaminade, CA</span>
+				January 9-12, 2022 <span style="padding-left:30px"> Chaminade, CA</span>
 			</p>
 		</div>
 
@@ -134,30 +137,30 @@
 
 			<ul class="avmenu">
 				<li><a href="index.html">Home</a></li>
-			<li><a href="cfp.html">Call For Papers</a></li>
-			<li><a href="officers.html">Officers</a></li>
-			<li><a href="org.html">Organization</a></li>
-			<li><a href="keynotespeakers.html">Keynotes</a></li>
-			<li><a href="program.html">Program</a></li>
+				<li><a href="cfp.html">Call For Papers</a></li>
+				<li><a href="officers.html">Officers</a></li>
+				<li><a href="org.html">Organization</a></li>
+				<li><a href="keynotespeakers.html">Keynotes</a></li>
+				<li><a href="program.html">Program</a></li>
 
-			<li><a href="registration.html">Venue and Registration</a></li>
-<!--			<li><a href="http://www.chaminade.com">Venue Information</a></li>   -->
-			<li><a href="../index.html">Previous Conferences</a>
-				<ul>
-				<li><a href="../cidr2021/index.html">CIDR 2021</a></li>
+				<li><a href="registration.html">Venue and Registration</a></li>
+				<!--			<li><a href="http://www.chaminade.com">Venue Information</a></li>   -->
+				<li><a href="../index.html">Previous Conferences</a>
+					<ul>
+						<li><a href="../cidr2021/index.html">CIDR 2021</a></li>
 
-				<li><a href="../cidr2020/index.html">CIDR 2020</a></li>
-				<li><a href="../cidr2019/index.html">CIDR 2019</a></li>
-				<li><a href="../cidr2017/index.html">CIDR 2017</a></li>
-					<li><a href="../cidr2015/index.html">CIDR 2015</a></li>
-                                        <li><a href="../cidr2013/index.html">CIDR 2013</a></li>
-                                        <li><a href="../cidr2011/index.html">CIDR 2011</a></li>
-					<li><a href="../cidr2009/index.html">CIDR 2009</a></li>
-					<li><a href="../cidr2007/index.html">CIDR 2007</a></li>
-					<li><a href="../cidr2005/index.html">CIDR 2005</a></li>
-					<li><a href="../cidr2003/index.html">CIDR 2003</a></li>
-				</ul>
-			</li>
+						<li><a href="../cidr2020/index.html">CIDR 2020</a></li>
+						<li><a href="../cidr2019/index.html">CIDR 2019</a></li>
+						<li><a href="../cidr2017/index.html">CIDR 2017</a></li>
+						<li><a href="../cidr2015/index.html">CIDR 2015</a></li>
+						<li><a href="../cidr2013/index.html">CIDR 2013</a></li>
+						<li><a href="../cidr2011/index.html">CIDR 2011</a></li>
+						<li><a href="../cidr2009/index.html">CIDR 2009</a></li>
+						<li><a href="../cidr2007/index.html">CIDR 2007</a></li>
+						<li><a href="../cidr2005/index.html">CIDR 2005</a></li>
+						<li><a href="../cidr2003/index.html">CIDR 2003</a></li>
+					</ul>
+				</li>
 			</ul>
 
 			<!--
@@ -171,29 +174,49 @@
 		</div>
 
 		<div id="contentwide">
-			<h2> Notes for CIDR 2022 Remote Attendees</h2>
+			<h2>Notes for CIDR 2022 Remote Attendees</h2>
 
-
-We are pleased you will be joining us for CIDR 2022 via Zoom. Here are some notes that you may find useful. If you have any questions or concerns, contact <a href = "mailto:CIDR2022Info@cidrdb.org"">CIDR2022Info@cidrdb.org </a>.
+			<p>
+				We are pleased you will be joining us for CIDR 2022 via Zoom. Here are some notes that you may find
+				useful. If you have any questions or concerns, contact <a href="mailto:CIDR2022Info@cidrdb.org"">CIDR2022Info@cidrdb.org</a>.
+</p>
 
 <h3>Zoom Link</h3>
-A day or two before CIDR 2022, you will be emailed a personal Zoom link that you should use to connect to the conference. Please do not share this link with others as this link uniquely identifies the remote attendee. Upon connecting, please mute yourself and disable video. If you have trouble connecting, use the email address above to describe your problem. If are connected but encountering other problems, use the email address above or send a direct message via Zoom chat to CIDR2022Mod.
+<p>A day or two before CIDR 2022, you will be emailed a personal Zoom link that you should use to connect to the conference. Please do not share this link with others as this link uniquely identifies the remote attendee. If you have trouble connecting, use the email address above to describe your problem. If are connected but encountering other problems, use the email address above or send a direct message via Zoom chat to CIDR2022Mod.</p>
 
-<h3>Zoom Audience</h3>
-	Use the Zoom chat to submit questions during a presentation. The Zoom moderator will either ask the question on your behalf or call on you to ask your question live. The choice depends on the preference of the speaker and session chair. Note that remote questions will be interspersed with questions from the in-person audience.
+<p><strong>Audio setup:</strong> your microphone is muted by default and cannot be unmuted unless requested by an organizers. The organizers will unmute speakers and will moderate the discussion in the Q&A session.</p>
 
-<h3>Zoom Presenters</h3>
-When it is time for you to present, the session chair will ask you to unmute. You may then start your presentation. You may share your slide deck immediately or first make an introduction. At the end of your presentation, stop screen sharing and the Q&A will then begin. At the end of Q&A, disable your video and mute yourself.
+<p>To ask a question:</p>
 
+<ol>
+	<li>Raise your hand using the <emph>" Raise Hand"</emph> feature and, if possible, turn on your camera.</li>
+					<li>When your question is coming up, an organizer will ask you to unmute.</li>
+					<li>Accept the invitation to unmute.</li>
+					<li>Ask your question and engage in the discussion. Do not mute your microphone yet.</li>
+					<li>Once the discussion is finished, mute your microphone.</li>
+					</ol>
 
+					<h3>Zoom Audience</h3>
+					<p>You can use the Zoom chat to submit questions during a presentation. The Zoom moderators will
+						either ask the question on your behalf or (preferably) call on you to ask your question live
+						following the process described above.
+						The choice depends on the preference of the speaker and session chair. Note that remote
+						questions will be interspersed with questions from the in-person audience.</p>
 
+					<h3>Zoom Presenters</h3>
+					<p>When it is time for you to present, the session chair will ask you to unmute and start your
+						presentation. You may then start your presentation. You may share your slide deck immediately or
+						first make an introduction. At the end of your presentation, stop screen sharing and the Q&A
+						will then begin. At the end of Q&A, stop screensharing and mute yourself.</p>
+
+		</div>
 		<div id="footer">
 			<p>
-				<span>&copy; 2022 <a href="registration.html#">CIDR
-						Conference</a></span><br /> Template design by <a
+				<span>&copy; 2022 <a href="registration.html#">CIDR Conference</a></span><br /> Template design by <a
 					href="http://andreasviklund.com/">Andreas Viklund</a>
 			</p>
 		</div>
-	</div>
+
 </body>
+
 </html>
