Remove resolved TBDs

--- a/cidr2022/accepted_papers.html
+++ b/cidr2022/accepted_papers.html
@@ -70,7 +70,7 @@
 <div id="contentwide"> 
 	  
           
-	 <h3>CIDR 2022 Program: TBD</h3>
+	 <h3>CIDR 2022 Program</h3>
 	 <h3>CIDR 2022 Accepted Papers:</h3>
 	 
 	 <table >
