--- a/cidr2022/keynotespeakers.html
+++ b/cidr2022/keynotespeakers.html
@@ -69,7 +69,7 @@
 	<div id="contentwide"> 
 	  
           
-	 <h3>CIDR 2022 Keynote Speakers: TBD</h3>
+	 <h3>CIDR 2022 Keynote Speakers</h3>
 	 	 <h2 id='monday'><span style='font-family:"Calibri",sans-serif'>Monday Keynote: 8:45 am
 -10:00 am</span></h2>
 
