--- a/cidr2022/program.html
+++ b/cidr2022/program.html
@@ -236,8 +236,7 @@
                 <h3 class="session-title"><a href="#">Session 3: Video Analytics</a></h3>
                 <span class="session-location">(Room: Santa Cruz)</span>
                 <span class="session-time">3:00 - 3:20</span>
-                <span class="session-talk"><a class="link" href="papers/p41-daum.pdf">Interactive Video Data Cleaning
-                        and Exploration</a></span>
+                <span class="session-talk"><a class="link" href="papers/p41-daum.pdf">VOCAL: Video Organization and Interactive Compositional AnaLytics</a></span>
                 <span class="session-presenter">Maureen Daum (University of Washington)*; Enhao Zhang (University of
                     Washington); Dong He (University of Washington); Magdalena Balazinska (UW); Brandon Haynes
                     (Microsoft); Ranjay Krishna (Stanford University); Apryle Craig (University of Washington); Aaron
