added chairs to DI program

--- a/cidr2022/diversity-inclusion.html
+++ b/cidr2022/diversity-inclusion.html
@@ -172,6 +172,8 @@
 
 		<div id="contentwide">
 			<h2> Women in DB: Discussion and Socialization (Open to All CIDR Attendees)</h2>
+			
+			<h3> Chairs: Yuanyuan Tian & Alekh Jindal </h3> 
 
 <p>
 To promote the diversity and inclusion of this year’s CIDR, we have organized a Women in DB: Discussion and Socialization event during the conference’s Monday lunch hour. There is an in-person version and an online version of this event. For the in-person version, some tables are reserved during Monday’s lunch at the Sunset Restaurant; and for the online version, a zoom session is set up for anyone who wants to participate virtually.
