--- a/cidr2022/program.html
+++ b/cidr2022/program.html
@@ -180,6 +180,8 @@
              <div class="session session-5 track-2" style="grid-column: track-2; grid-row: time-1200 / time-1300;">
                 <h3 class="session-title"> <a href="diversity-inclusion.html">Women in DB: Discussion and Socialization (Open to All CIDR Attendees)</a></h3>
                 <span class="session-location">(Room: Sunset Restaurant)</span>
+                <span class="session-presenter"> Chairs: Yuanyuan Tian & Alekh Jindal</span>
+
             </div>
             
             
