added magdas information

--- a/cidr2022/keynotespeakers.html
+++ b/cidr2022/keynotespeakers.html
@@ -126,13 +126,15 @@ line-height:115%;color:black'>&nbsp;</span></b></p>
 
 <b><span style='font-size:16.0pt;color:black'>Abstract:</span></b><span
 style='color:black'><br>
-TBD</br>
+The proliferation of inexpensive high-quality cameras coupled with recent advances in computer vision have enabled new applications on video data. The database community is well positioned to deliver the tools needed to support these new types of applications, which has renewed interest in research in video database management systems (VDBMSs).  In this talk, we explore the diverse challenges associated with managing video data. We focus, in particular, on the storage manager and present several techniques to store video data in a way that accelerates  queries over that data. We then move up the stack and discuss different types of data models that can be exposed to applications. Finally, we discuss the additional challenges of the end-to-end video analytics pipeline and ideas around benchmarking VDBMSs.
+</br>
 
 <br>
 
 
 <b><span style='font-size:16.0pt;color:black'>Bio:</span></b><span
-style='color:black'><br>TBD</br>
+style='color:black'><br>Magdalena Balazinska is Professor and Director of the Paul G. Allen School of Computer Science & Engineering at the University of Washington. Magdalena's research interests are in the field of database management systems. Her current research focuses on data management for data science, big data systems, cloud computing, and image and video analytics. Prior to her leadership of the Allen School, Magdalena was the Director of the eScience Institute, the Associate Vice Provost for Data Science, and the Director of the Advanced Data Science PhD Option. She also served as Co-Editor-in-Chief for Volume 13 of the Proceedings of the Very Large Data Bases Endowment (PVLDB) journal and as PC co-chair for the corresponding VLDB'20 conference. Magdalena is an ACM Fellow. She holds a Ph.D. from the Massachusetts Institute of Technology (2006). Shortly after her arrival at the University of Washington, she was named a Microsoft Research New Faculty Fellow (2007). Magdalena received the inaugural VLDB Women in Database Research Award (2016) for her work on scalable distributed data systems. She also received an ACM SIGMOD Test-of-Time Award (2017) for her work on fault-tolerant distributed stream processing and a 10-year most influential paper award (2010) from her earlier work on reengineering software clones.
+</br>
 
 <p class=MsoNormal style='margin-bottom:0in;line-height:normal'><span
 style='font-size:12.0pt;font-family:"Times New Roman",serif'>&nbsp;</span></p>
