Change Kevin's affiliation

--- a/cidr2022/officers.html
+++ b/cidr2022/officers.html
@@ -102,7 +102,7 @@
                                  
         <h3>Local Arrangement Chair</h3>
 		<ul> 
-		<li><b>Kevin Wilkinson</b>, HPE</li>
+		<li><b>Kevin Wilkinson</b>, CIDR Foundation</li>
 		<br />
           </ul> 
 
