Typeset all caps names

--- a/cidr2022/program.html
+++ b/cidr2022/program.html
@@ -163,12 +163,12 @@
                 <span class="session-talk"><a class="link" href="papers/p8-liang.pdf">Micro-architectural Analysis of
                         OLAP Systems on Persistent Memory</a></span>
                 <span class="session-presenter">Jie Liang Ang (National University of Singapore)*; Jefferson Chu
-                    (National University of Singapore); HIEU LE TRUNG (Bytedance); Jiajun Liu (NUS); Jiong He (Bytedance
+                    (National University of Singapore); Hieu Le Trung (Bytedance); Jiajun Liu (NUS); Jiong He (Bytedance
                     Ltd.); Qian Lin (ByteDance); Bingsheng He (National University of Singapore)</span>
                 <span class="session-time">11:55 - 12:00</span>
                 <span class="session-talk"><a class="link" href="papers/a23-ding.pdf">Runtime Encoding Execution in
                         AnalyticDB: Efficient Query Executor for Cloud-native Database</a></span>
-                <span class="session-presenter">QIAOYI DING (ALIBABA)</span>
+                <span class="session-presenter">Qiaoyi Ding (Alibaba)</span>
 
             </div>
 
