--- a/cidr2022/program.html
+++ b/cidr2022/program.html
@@ -259,11 +259,10 @@
                     Zaharia (Stanford and Databricks)</span>
 
                 <span class="session-time">03:40 - 03:50</span>
-                <span class="session-talk"><a class="link" href="papers/p13-brachmann-cidr20.pdf">Sponsor Talk
-                        1</a></span>
+                <span class="session-talk"><a class="link" href="#">Sponsor Talk by Microsoft</a></span>
 
-                <span class="session-time">3:50 - 4:00</span>
-                <span class="session-talk"><a class="link" href="papers/p14-shang-cidr20.pdf">Sponsor Talk 2</a></span>
+                <!-- <span class="session-time">3:50 - 4:00</span> -->
+                <!-- <span class="session-talk"><a class="link" href="">Sponsor Talk slot (empty)</a></span> -->
 
 
             </div>
@@ -403,10 +402,10 @@
                         Profiling Tools</a></span>
                 <span class="session-presenter">Immanuel Trummer (Cornell)*</span>
                 <span class="session-time">2:10 - 2:20</span>
-                <span class="session-talk"><a class="link" href="papers/sponsortalk3.pdf">Sponsor Talk 3</a></span>
+                <span class="session-talk"><a class="link" href="#">Sponsor Talk by Snowflake</a></span>
                 <span class="session-presenter"></span>
                 <span class="session-time">2:20 - 2:30</span>
-                <span class="session-talk"><a class="link" href="papers/sponsortalk4.pdf">Sponsor Talk 4</a></span>
+                <span class="session-talk"><a class="link" href="#">Sponsor Talk by Oracle</a></span>
                 <span class="session-presenter"></span>
 
 
@@ -557,11 +556,11 @@
                     (EPFL)</span>
 
                 <span class="session-time">10:10 - 10:20</span>
-                <span class="session-talk"><a class="link" href="papers/spnsortalk5.pdf">Sponsor talk by SAP</a></span>
+                <span class="session-talk"><a class="link" href="#">Sponsor Talk by SAP</a></span>
                 <span class="session-presenter"></span>
 
                 <span class="session-time">10:20 - 10:30</span>
-                <span class="session-talk"><a class="link" href="papers/p35-rezig-cidr20.pdf">Sponsor talk 6</a></span>
+                <span class="session-talk"><a class="link" href="#">Sponsor Talk by Google</a></span>
                 <span class="session-presenter"></span>
             </div>
 
