sponsor talk 4 > oracle

--- a/cidr2022/program.html
+++ b/cidr2022/program.html
@@ -405,7 +405,7 @@
                 <span class="session-talk"><a class="link" href="#">Sponsor Talk by Snowflake</a></span>
                 <span class="session-presenter"></span>
                 <span class="session-time">2:20 - 2:30</span>
-                <span class="session-talk"><a class="link" href="#">Sponsor Talk by Oracle</a></span>
+                <span class="session-talk">Oracle's Sponsor Talk</span>
                 <span class="session-presenter"></span>
 
 
