Clarify remote attendee instructions

--- a/cidr2022/remote-attendees.html
+++ b/cidr2022/remote-attendees.html
@@ -184,12 +184,13 @@
 <h3>Zoom Link</h3>
 <p>A day or two before CIDR 2022, you will be emailed a personal Zoom link that you should use to connect to the conference. Please do not share this link with others as this link uniquely identifies the remote attendee. If you have trouble connecting, use the email address above to describe your problem. If are connected but encountering other problems, use the email address above or send a direct message via Zoom chat to CIDR2022Mod.</p>
 
-<p><strong>Audio setup:</strong> your microphone is muted by default and cannot be unmuted unless requested by an organizers. The organizers will unmute speakers and will moderate the discussion in the Q&A session.</p>
+<h3>Interaction in the Q&A session</h3>
+<p><strong>Audio setup:</strong> your microphone is muted by default and cannot be unmuted unless requested by an organizer. The organizers will unmute speakers and will moderate the discussion in the Q&A session.</p>
 
 <p>To ask a question:</p>
 
 <ol>
-	<li>Raise your hand using the <emph>" Raise Hand"</emph> feature and, if possible, turn on your camera.</li>
+	<li>Raise your hand using the <emph>"Raise Hand"</emph> feature and, if possible, turn on your camera.</li>
 					<li>When your question is coming up, an organizer will ask you to unmute.</li>
 					<li>Accept the invitation to unmute.</li>
 					<li>Ask your question and engage in the discussion. Do not mute your microphone yet.</li>
@@ -198,8 +199,8 @@
 
 					<h3>Zoom Audience</h3>
 					<p>You can use the Zoom chat to submit questions during a presentation. The Zoom moderators will
-						either ask the question on your behalf or (preferably) call on you to ask your question live
-						following the process described above.
+						either ask the question on your behalf or (preferably) tell you to ask your question live
+						according to the process described above.
 						The choice depends on the preference of the speaker and session chair. Note that remote
 						questions will be interspersed with questions from the in-person audience.</p>
 
