added chairs 6 out of 8

--- a/cidr2022/program.html
+++ b/cidr2022/program.html
@@ -132,6 +132,8 @@
 
             <div class="session session-4 track-all" style="grid-column: track-all; grid-row: time-1030 / time-1200;">
                 <h3 class="session-title"><a href="#">Session 1: Modern Data Storage</a></h3>
+                <span class="session-presenter"> Chair:Natacha Crooks </span>
+
                 <span class="session-location">(Room: Santa Cruz)</span>
                 <span class="session-time">10:30 - 10:50</span>
                 <span class="session-talk"><a class="link" href="papers/p93-purandare.pdf">Append is Near: Log-based
@@ -190,6 +192,8 @@
             <h3 class="time-slot" style="grid-row: time-1300;">01:00pm</h3>
             <div class="session session-6 track-all" style="grid-column: track-all; grid-row: time-1300 / time-1430;">
                 <h3 class="session-title"><a href="#">Session 2: New Systems</a></h3>
+                <span class="session-presenter"> Chair: Tilmann Rabl </span>
+
                 <span class="session-location">(Room: Santa Cruz)</span>
                 <span class="session-time">1:00 - 1:20</span>
                 <span class="session-talk"><a class="link" href="papers/p26-li.pdf">A Progress Report on DBOS: A
@@ -243,6 +247,7 @@
 
             <div class="session session-8 track-all" style="grid-column: track-all; grid-row: time-1500 / time-1600;">
                 <h3 class="session-title"><a href="#">Session 3: Video Analytics</a></h3>
+                <span class="session-presenter"> Chair: Jyoti Leeka </span>
                 <span class="session-location">(Room: Santa Cruz)</span>
                 <span class="session-time">3:00 - 3:20</span>
                 <span class="session-talk"><a class="link" href="papers/p41-daum.pdf">VOCAL: Video Organization and Interactive Compositional AnaLytics</a></span>
@@ -368,6 +373,7 @@
             <h3 class="time-slot" style="grid-row: time-1300;">01:00pm</h3>
             <div class="session session-5 track-all" style="grid-column: track-all; grid-row: time-1300 / time-1430;">
                 <h3 class="session-title"><a href="#">Session 5: Data Exploration</a></h3>
+                <span class="session-presenter"> Chair: Yuanyuan Tian</span>
                 <span class="session-location">(Room: Santa Cruz)</span>
                 <span class="session-time">1:00 - 1:20</span>
                 <span class="session-talk"><a class="link" href="papers/p50-tao.pdf">Kyrix-J: Visual Discovery of
@@ -423,6 +429,7 @@
 
             <div class="session session-15 track-all" style="grid-column: track-all; grid-row: time-1500 / time-1600;">
                 <h3 class="session-title"><a href="#">Session 6: Data Science</a></h3>
+                <span class="session-presenter">Chair: Carsten Binnig</span>
                 <span class="session-location">(Room: Santa Cruz)</span>
                 <span class="session-time">3:00 - 3:20</span>
                 <span class="session-talk"><a class="link" href="papers/p4-damme.pdf">DAPHNE: An Open and Extensible
@@ -524,6 +531,8 @@
 
             <div class="session session-4 track-all" style="grid-column: track-all; grid-row: time-0830 / time-1030;">
                 <h3 class="session-title"><a href="#">Session 7: Query Processing</a></h3>
+                <span class="session-presenter">Chair: Matthias Böhm</span>
+
                 <span class="session-location">(Room: Santa Cruz)</span>
                 <span class="session-time">08:30 - 08:50</span>
                 <span class="session-talk"><a class="link" href="papers/p18-flachs.pdf">The 3D Hash Join: Building On
