--- a/cidr2022/diversity-inclusion.html
+++ b/cidr2022/diversity-inclusion.html
@@ -9,7 +9,7 @@
 	media="screen,projection" />
 <link rel="stylesheet" type="text/css"
 	href="http://www.cidrdb.org/cidr2013/print.css" media="print" />
-<title>CIDR 2022 - Registration</title>
+<title>CIDR 2022 - Women in DB</title>
 
 <script type="text/javascript" src="jquery-1.2.6.min.js"></script>
 <script language="JavaScript">
