Add calendar link

--- a/cidr2022/program.html
+++ b/cidr2022/program.html
@@ -77,6 +77,9 @@
 
 
             <h3>CIDR 2022 Program</h3>
+            <br>
+            <p>Get the program as <a href="https://calendar.google.com/calendar/u/0/embed?src=js7ao33ccj4git6fnkshbdcq8c@group.calendar.google.com">Calendar entries</a>.</p>
+
             <p>Talk videos will be posted after each conference day on <a
                     href="https://www.youtube.com/channel/UCMSoRpgXRxhiSna6FkhTGeg">YouTube</a>.
             <p>
