--- a/cidr2022/program.html
+++ b/cidr2022/program.html
@@ -104,7 +104,7 @@
             <h3 class="time-slot" style="grid-row: time-0700;">7:00am</h3>
             <div class="session session-1 track-all" style="grid-column: track-all; grid-row: time-0700 / time-0830;">
                 <h3 class="session-title">Breakfast </h3>
-                <span class="session-location">(Room: , hotel guests only)</span>
+                <span class="session-location">(hotel guests only)</span>
             </div>
             <h3 class="time-slot" style="grid-row: time-0830;">8:30am</h3>
             <div class="session session-2 track-all" style="grid-column: track-all; grid-row: time-0830 / time-0845;">
