--- a/cidr2022/program.html
+++ b/cidr2022/program.html
@@ -267,7 +267,7 @@
                     Zaharia (Stanford and Databricks)</span>
 
                 <span class="session-time">03:40 - 03:50</span>
-                <span class="session-talk"><a class="link" href="#">Sponsor Talk by Microsoft</a></span>
+                <span class="session-talk"><a class="link" href="#">Sponsor Talk by Google</a></span>
 
                 <!-- <span class="session-time">3:50 - 4:00</span> -->
                 <!-- <span class="session-talk"><a class="link" href="">Sponsor Talk slot (empty)</a></span> -->
@@ -328,6 +328,7 @@
 
             <div class="session session-12 track-all" style="grid-column: track-all; grid-row: time-1030 / time-1200;">
                 <h3 class="session-title"><a href="#">Session 4: Cloud Computing</a></h3>
+                 <span class="session-presenter"> Chair:Florin Rusu </span>
                 <span class="session-location">(Room: Santa Cruz)</span>
                 <span class="session-time">10:30 - 10:50</span>
                 <span class="session-talk"><a class="link" href="papers/p31-zhang.pdf">CompuCache: Remote Computable
@@ -572,7 +573,7 @@
                 <span class="session-presenter"></span>
 
                 <span class="session-time">10:20 - 10:30</span>
-                <span class="session-talk"><a class="link" href="#">Sponsor Talk by Google</a></span>
+                <span class="session-talk"><a class="link" href="#">Sponsor Talk by Microsoft</a></span>
                 <span class="session-presenter"></span>
             </div>
 
