Add day 2's talks

--- a/cidr2022/program.html
+++ b/cidr2022/program.html
@@ -361,36 +361,48 @@
                         Caching using Spot VMs</a></span>
                 <span class="session-presenter">Qizhen Zhang (University of Pennsylvania)*; Philip A Bernstein
                     (Microsoft Research); Daniel S Berger (Microsoft Research); Badrish Chandramouli (Microsoft
-                    Research); Vincent Liu (University of Pennsylvania); Boon Thau Loo (Univ. of Pennsylvania)</span>
+                    Research); Vincent Liu (University of Pennsylvania); Boon Thau Loo (Univ. of Pennsylvania)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=XXJj1nJuLbo">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
                 <span class="session-time">10:50 - 11:10</span>
                 <span class="session-talk"> <a class="link" href="papers/p44-madden.pdf">Self-Organizing Data
                         Containers</a></span>
                 <span class="session-presenter">Samuel Madden (MIT)*; Jialin Ding (MIT); Tim Kraska (MIT); Sivaprasad
                     Sudhir (MIT); David E Cohen (Intel); Timothy Mattson (Intel); Nesime Tatbul (Intel Labs and
-                    MIT)</span>
+                    MIT)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=y9iprITX7CQ">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
 
                 <span class="session-time">11:10 - 11:30</span>
                 <span class="session-talk"> <a class="link" href="papers/p11-korolija.pdf">Farview: Disaggregated Memory
                         with Operator Off-loading for Database Engines</a></span>
                 <span class="session-presenter">Dario Korolija (ETH Zurich)*; Dimitrios Koutsoukos (ETHZ); Kimberly
                     Keeton (Unaffiliated); Konstantin Taranov (ETH Zurich); Dejan Milojicic (Hewlett Packard Labs);
-                    Gustavo Alonso (ETHZ)</span>
+                    Gustavo Alonso (ETHZ)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=IELJk9R2mfA">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
 
                 <span class="session-time">11:30 - 11:50</span>
                 <span class="session-talk"> <a class="link" href="papers/p5-helland.pdf">Decoupled Transactions: Low
                         Tail Latency Online Transactions Atop Jittery Servers</a></span>
-                <span class="session-presenter">Pat Helland (Salesforce)*</span>
+                <span class="session-presenter">Pat Helland (Salesforce)*
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=72UZ8DxPa8o">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
 
 
                 <span class="session-time">11:50 - 11:55</span>
                 <span class="session-talk"><a class="link" href="papers/a69-wang.pdf">A Network Use for Incomplete
                         Knowledge Management</a></span>
-                <span class="session-presenter">Anduo Wang (Temple University)*; Fangping Lan (Temple University)</span>
+                <span class="session-presenter">Anduo Wang (Temple University)*; Fangping Lan (Temple University)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=EgKa0vwzpqA">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
                 <span class="session-time">11:55 - 12:00</span>
                 <span class="session-talk"><a class="link" href="papers/p103-stanford.pdf">Correctness in Stream
                         Processing: Challenges and Opportunities</a></span>
                 <span class="session-presenter">Caleb Stanford (University of Pennsylvania)*; Konstantinos Kallas
-                    (University of Pennsylvania); Rajeev Alur (University of Pennsylvania)</span>
+                    (University of Pennsylvania); Rajeev Alur (University of Pennsylvania)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
 
             </div>
 
@@ -409,7 +421,9 @@
                 <span class="session-talk"><a class="link" href="papers/p50-tao.pdf">Kyrix-J: Visual Discovery of
                         Connected Datasets in a Data Lake</a></span>
                 <span class="session-presenter">Wenbo Tao (MIT)*; Adam Sah (Independent); Leilani Battle (University of
-                    Washington); Remco Chang (Tufts University); Michael Stonebraker (MIT)</span>
+                    Washington); Remco Chang (Tufts University); Michael Stonebraker (MIT)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=AolV_9mrbr0">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
 
                 <span class="session-time">1:20 - 1:40</span>
                 <span class="session-talk"><a class="link" href="papers/p63-anderson.pdf">Building a Shared Conceptual
@@ -419,24 +433,32 @@
                     of California, Berkeley); Doug Downey (Allen Institute for Artificial Intelligence); Tian Gao
                     (University of Michigan); Kexin Huang (University of Michigan); Dinghao Shen (University of
                     Michigan); Jenny Vo-Phamhi (University of Michigan); Yitong Wang (University of Michigan); Yuning
-                    Wang (University of Michigan); Anna Zeng (MIT)</span>
+                    Wang (University of Michigan); Anna Zeng (MIT)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=p5kdbAnY-hg">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
 
                 <span class="session-time">1:40 - 2:00</span>
                 <span class="session-talk"><a class="link" href="papers/p40-lissandrini.pdf">Knowledge Graph Exploration
                         Systems: are we lost?</a></span>
                 <span class="session-presenter">Matteo Lissandrini (Aalborg University)*; Davide Mottin (Aarhus
-                    University); Katja Hose (Aalborg University); Torben Bach Pedersen (Aalborg University)</span>
+                    University); Katja Hose (Aalborg University); Torben Bach Pedersen (Aalborg University)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=IoPzWIXH7kQ">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
 
                 <span class="session-time">2:00 - 2:05</span>
                 <span class="session-talk"><a class="link" href="papers/p51-orr.pdf">Data Management Opportunities for
                         Foundation Models</a></span>
                 <span class="session-presenter">Laurel Orr (Stanford University)*; Karan Goel (Stanford); Christopher Re
-                    (Stanford University)</span>
+                    (Stanford University)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=8u7bwW4h4io">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
 
                 <span class="session-time">2:05 - 2:10</span>
                 <span class="session-talk"><a class="link" href="papers/a55-trummer.pdf">Towards NLP-Enhanced Data
                         Profiling Tools</a></span>
-                <span class="session-presenter">Immanuel Trummer (Cornell)*</span>
+                <span class="session-presenter">Immanuel Trummer (Cornell)*
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=ctsL-D_bDA4">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
                 <span class="session-time">2:10 - 2:20</span>
                 <span class="session-talk"><a class="link" href="#">Sponsor Talk by Snowflake</a></span>
                 <span class="session-presenter"></span>
@@ -482,34 +504,43 @@
                     (IT University of Copenhagen); Wojciech Ulatowski (Intel); Yuanyuan Wang (Technical University of
                     Munich (TUM); German Aerospace Center (DLR)); Izajasz Wrosz (Intel); Aleš Zamuda (University of
                     Maribor); Ce Zhang (ETH); Xiaoxiang Zhu (Technical University of Munich (TUM); German Aerospace
-                    Center (DLR)</span>
+                    Center (DLR)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=AKbJCkPjJDQ">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
 
                 <span class="session-time">3:20 - 3:40</span>
                 <span class="session-talk"><a class="link" href="papers/p49-gathani.pdf">Augmenting Decision Making via
                         Interactive What-If Analysis</a></span>
                 <span class="session-presenter">Sneha Gathani (Sigma Computing)*; Madelon Hulsebos (Sigma Computing);
                     James Gale (Sigma Computing); Peter Haas (University of Massachusetts Amherst); Cagatay Demiralp
-                    (Sigma Computing)</span>
+                    (Sigma Computing)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=an-oTVQzHT0">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
 
                 <span class="session-time">03:40 - 03:45</span>
                 <span class="session-talk"><a class="link" href="papers/p20-shankar.pdf">Towards Observability for
                         Machine Learning Pipelines</a></span>
-                <span class="session-presenter">Shreya Shankar (University of California Berkeley)*; Aditya Parameswaran
-                    (University of California, Berkeley)</span>
+                <span class="session-presenter">Shreya Shankar (University of California Berkeley)*; Aditya Parameswaran (University of California, Berkeley)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=aIs9tZ5TW48">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
 
                 <span class="session-time">3:45 - 3:50</span>
                 <span class="session-talk"><a class="link" href="papers/a1-schelter.pdf">Screening Native Machine
                         Learning Pipelines with ArgusEyes</a></span>
                 <span class="session-presenter">Sebastian Schelter (University of Amsterdam)*; Stefan Grafberger
                     (University of Amsterdam); Shubha Guha (University of Amsterdam); Olivier Sprangers (University of
-                    Amsterdam); Bojan Karlas (ETH Zurich); Ce Zhang (ETH)</span>
+                    Amsterdam); Bojan Karlas (ETH Zurich); Ce Zhang (ETH)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=yhGQcTInEpw">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
 
                 <span class="session-time">03:50 - 03:55</span>
                 <span class="session-talk"><a class="link" href="papers/a48-hulsebos.pdf">Making Table Understanding
                         Work in Practice</a></span>
                 <span class="session-presenter">Madelon Hulsebos (Sigma Computing)*; Sneha Gathani (Sigma Computing);
                     James Gale (Sigma Computing); Isil Dillig (UT Austin); Paul Groth (University of Amsterdam); Cagatay
-                    Demiralp (Sigma Computing)</span>
+                    Demiralp (Sigma Computing)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=-BE5rWNMXnU">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
 
                 <span class="session-time">3:55 - 4:00</span>
                 <span class="session-talk"><a class="link" href="papers/a80-rezig.pdf">Examples are All You Need:
@@ -517,7 +548,9 @@
                 <span class="session-presenter">El Kindi Rezig (MIT)*; Anshul Bhandari (National Institute of Technology
                     Hamirpur); Anna Fariha (Microsoft); Benjamin Price (MIT Lincoln Laboratory); Allan Vanterpool
                     (United States Air Force); Andrew Bowne (United States Air Force); Lindsey McEvoy (U.S. Air Force AI
-                    Accelerator (SAF/AQ)); Vijay Gadepally (MIT Lincoln Laboratory)</span>
+                    Accelerator (SAF/AQ)); Vijay Gadepally (MIT Lincoln Laboratory)
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=2k5Z7MxqdeY">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                </span>
 
 
 
