Add 2nd keynote

--- a/cidr2022/keynotespeakers.html
+++ b/cidr2022/keynotespeakers.html
@@ -79,9 +79,7 @@ id="Picture 2" src="img/matei-zaharia.jpeg"></span></p>
 
 <p class=MsoNormal><span style='font-size:16.0pt;line-height:115%'>Matei Zaharia, Stanford and Databricks</span></p>
 
-<!--<p class=MsoNormal></p><button class = "link" style="color:black"><a href="">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button></p>
--->
-
+<p><button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=LJb1tR3i9hU">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button></p>
 
 <p class=MsoNormal style='margin-bottom:0in;line-height:normal'><b><span
 style='font-size:16.0pt'>Title:
@@ -90,8 +88,6 @@ Lessons from Building Databricks
 
 <p class=MsoNormal style='margin-bottom:0in'><b><span style='font-size:16.0pt;
 line-height:115%;color:black'>&nbsp;</span></b></p>
-
-<p><button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=LJb1tR3i9hU">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button></p>
 
 <b><span style='font-size:16.0pt;color:black'>Abstract:</span></b><span
 style='color:black'><br>
@@ -118,8 +114,7 @@ src="img/magda_sm.jpeg"></span>
 
 <p class=MsoNormal><span style='font-size:16.0pt;line-height:115%'>Magdalena Balazinska, University of Washington</span></p>
 
-<!-- <p class=MsoNormal><button class = "link" style="color:black"><a href="">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button></p>
--->
+<p><button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=0HK8n-f5cOM">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button></p>
 
 <p class=MsoNormal style='margin-bottom:0in;line-height:normal'><b><span
 style='font-size:16.0pt'>Title: The Diverse Challenges of Video Data Management</span> </b><br></p>
