Add keynote links to program.html

--- a/cidr2022/program.html
+++ b/cidr2022/program.html
@@ -122,7 +122,8 @@
                 <span class="session-presenter"> Chair: Fatma Özcan (Google)</span>
                 <span class="session-talk">Lessons from Building Databricks</span>
                 <span class="keynote-presenter"> <a class="link" href="keynotespeakers.html#monday"> Matei Zaharia
-                        (Stanford and Databricks) </a></span>
+                        (Stanford and Databricks)</a></span>
+                <span><button class="link" style="color:black;margin-top:5px"><a href="https://www.youtube.com/watch?v=LJb1tR3i9hU">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button></span>
             </div>
 
             <h3 class="time-slot" style="grid-row: time-1000;">10:00am</h3>
@@ -338,8 +339,8 @@
                 <span class="session-presenter"> Chair: Peter Boncz (CWI)</span>
                 <span class="session-time">8:45 - 10:00</span>
                 <span class="session-talk">Title: The Diverse Challenges of Video Data Management</span>
-                <span class="keynote-presenter"> <a class="link" href="keynotespeakers.html#tuesday"> Magdalena
-                        Balazinska (UW) </a></span>
+                <span class="keynote-presenter"> <a class="link" href="keynotespeakers.html#tuesday">Magdalena Balazinska (UW)</a></span>
+                <span><button class="link" style="color:black;margin-top:5px"><a href="https://www.youtube.com/watch?v=0HK8n-f5cOM">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button></span>
             </div>
 
 
