Add chair for session 8

--- a/cidr2022/program.html
+++ b/cidr2022/program.html
@@ -646,6 +646,7 @@
             <h3 class="time-slot" style="grid-row: time-1100;">11:00am</h3>
             <div class="session session-4 track-all" style="grid-column: track-all; grid-row: time-1100 / time-1230;">
                 <h3 class="session-title"><a href="#">Session 8: ML and Query Optimization</a></h3>
+                <span class="session-presenter">Chair: Fatma Özcan (Google)</span>
                 <span class="session-location">(Room: Santa Cruz)</span>
                 <span class="session-time">11:00 - 11:20</span>
                 <span class="session-talk"><a class="link" href="papers/p70-kossmann.pdf">Workload-driven, Lazy
