--- a/cidr2022/program.html
+++ b/cidr2022/program.html
@@ -207,7 +207,6 @@
             <div class="session session-6 track-all" style="grid-column: track-all; grid-row: time-1300 / time-1430;">
                 <h3 class="session-title"><a href="#">Session 2: New Systems</a></h3>
                 <span class="session-presenter"> Chair: Tilmann Rabl </span>
-
                 <span class="session-location">(Room: Santa Cruz)</span>
                 <span class="session-time">1:00 - 1:20</span>
                 <span class="session-talk"><a class="link" href="papers/p26-li.pdf">A Progress Report on DBOS: A
@@ -402,7 +401,7 @@
                         Processing: Challenges and Opportunities</a></span>
                 <span class="session-presenter">Caleb Stanford (University of Pennsylvania)*; Konstantinos Kallas
                     (University of Pennsylvania); Rajeev Alur (University of Pennsylvania)
-                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+                    <button class="link" style="color:black"><a href="https://www.youtube.com/watch?v=XfHIicIEgfM">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
                 </span>
 
             </div>
